WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102094
[BlackBerry] Fully restore both zoom and scroll when leaving an input field.
https://bugs.webkit.org/show_bug.cgi?id=102094
Summary
[BlackBerry] Fully restore both zoom and scroll when leaving an input field.
Mike Fenton
Reported
2012-11-13 08:39:58 PST
SSIA.
Attachments
Patch
(6.53 KB, patch)
2012-11-13 09:06 PST
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2012-11-13 09:06:02 PST
Created
attachment 173907
[details]
Patch
Rob Buis
Comment 2
2012-11-13 09:07:54 PST
Comment on
attachment 173907
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-11-13 09:12:43 PST
Comment on
attachment 173907
[details]
Patch Rejecting
attachment 173907
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/14823451
WebKit Review Bot
Comment 4
2012-11-13 10:24:33 PST
Comment on
attachment 173907
[details]
Patch Clearing flags on attachment: 173907 Committed
r134437
: <
http://trac.webkit.org/changeset/134437
>
WebKit Review Bot
Comment 5
2012-11-13 10:24:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug