[BlackBerry] Fully restore both zoom and scroll when leaving an input field. https://bugs.webkit.org/show_bug.cgi?id=102094

Reviewed by Rob Buis.

PR 234187.

Cache both the zoom and scroll position prior to adjusting
for input focus so that state can be reset fully.

Reviewed Internally by Gen Mak.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::ensureFocusTextElementVisible):
* WebKitSupport/InputHandler.h:
(InputHandler):


Canonical link: https://commits.webkit.org/120174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134437 268f45cc-cd09-0410-ab3c-d52691b4dbfc